--- a/OverwatchGatherData.ipynb
+++ b/OverwatchGatherData.ipynb
@@ -55,7 +55,17 @@
     "    \n",
     "    battletag = battletag.replace('#', '-')\n",
     "    \n",
-    "    return requests.get('https://owapi.net/api/v3/u/{}/blob'.format(battletag), headers={'User-Agent':'OWAgent'}).text\n",
+    "    text = requests.get('https://owapi.net/api/v3/u/{}/blob'.format(battletag), headers={'User-Agent':'OWAgent'}).text\n",
+    "    \n",
+    "    if \"ratelimited\" in text:\n",
+    "        \n",
+    "        time.sleep(4)\n",
+    "        \n",
+    "        return get_user_json(battletag)\n",
+    "    \n",
+    "    else:\n",
+    "        \n",
+    "        return text\n",
     "\n",
     "def save_profile(battletag): # Battletag -> file.json\n",
     "    \n",
@@ -77,12 +87,6 @@
     "                profile.write(data)\n",
     "                \n",
     "            print('Saved: ' + battletag)\n",
-    "            \n",
-    "        elif \"ratelimited\" in data:\n",
-    "            \n",
-    "            time.sleep(8)\n",
-    "            \n",
-    "            save_profile(battletag)\n",
     "            \n",
     "        else:\n",
     "            \n",
@@ -122,7 +126,7 @@
     "\n",
     "            return Player(json)\n",
     "        \n",
-    "        raise Exception('Battletag Error')\n",
+    "        raise Exception('Battletag Error ' + json)\n",
     "\n",
     "    def get_regions(self):\n",
     "\n",
