--- a/OverwatchProcessData.ipynb
+++ b/OverwatchProcessData.ipynb
@@ -17,17 +17,83 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Player Data Structure\n",
     "\n",
     "gametype = ['competitive', 'quickplay']\n",
     "\n",
-    "general_stats = \"final_blows_avg_per_10_min, offensive_assists_most_in_game, melee_final_blows_most_in_game, environmental_kills, solo_kills_avg_per_10_min, medals_gold, healing_done_most_in_game, final_blows, solo_kills, teleporter_pad_destroyed_most_in_game, of_teams_hero_damage, medals_bronze, time_spent_on_fire_most_in_game, hero_damage_done_most_in_game, turrets_destroyed, deaths, defensive_assists, games_tied, kill_streak_best, eliminations_avg_per_10_min, time_played, shield_generator_destroyed_most_in_game, medals, melee_percentage_of_final_blows, all_damage_done, all_damage_done_avg_per_10_min, melee_final_blows_avg_per_10_min, shield_generator_destroyed, objective_kills_most_in_game, barrier_damage_done_avg_per_10_min, of_teams_damage, objective_time, games_lost, time_spent_on_fire_avg_per_10_min, healing_done_avg_per_10_min, multikills, kpd, hero_damage_done, objective_time_most_in_game, objective_time_avg_per_10_min, defensive_assists_most_in_game, final_blows_most_in_game, games_won, deaths_avg_per_10_min, damage_blocked, solo_kills_most_in_game, recon_assists, melee_final_blows, recon_assists_most_in_game, cards, all_damage_done_most_in_game, multikill_best, environmental_kills_most_in_game, turrets_destroyed_most_in_game, objective_kills, medals_silver, games_played, weapon_accuracy, eliminations, offensive_assists, hero_damage_done_avg_per_10_min, eliminations_most_in_game, barrier_damage_done, time_spent_on_fire, environmental_deaths, teleporter_pads_destroyed, healing_done, objective_kills_avg_per_10_min\".split(', ')\n",
-    "   "
+    "general_stats = [\n",
+    "     'final_blows_avg_per_10_min',\n",
+    "     'offensive_assists_most_in_game',\n",
+    "     'melee_final_blows_most_in_game',\n",
+    "     'environmental_kills',\n",
+    "     'solo_kills_avg_per_10_min',\n",
+    "     'medals_gold',\n",
+    "     'healing_done_most_in_game',\n",
+    "     'final_blows',\n",
+    "     'solo_kills',\n",
+    "     'teleporter_pad_destroyed_most_in_game',\n",
+    "     'of_teams_hero_damage',\n",
+    "     'medals_bronze',\n",
+    "     'time_spent_on_fire_most_in_game',\n",
+    "     'hero_damage_done_most_in_game',\n",
+    "     'turrets_destroyed',\n",
+    "     'deaths',\n",
+    "     'defensive_assists',\n",
+    "     'games_tied',\n",
+    "     'kill_streak_best',\n",
+    "     'eliminations_avg_per_10_min',\n",
+    "     'time_played',\n",
+    "     'shield_generator_destroyed_most_in_game',\n",
+    "     'medals',\n",
+    "     'melee_percentage_of_final_blows',\n",
+    "     'all_damage_done',\n",
+    "     'all_damage_done_avg_per_10_min',\n",
+    "     'melee_final_blows_avg_per_10_min',\n",
+    "     'shield_generator_destroyed',\n",
+    "     'objective_kills_most_in_game',\n",
+    "     'barrier_damage_done_avg_per_10_min',\n",
+    "     'of_teams_damage',\n",
+    "     'objective_time',\n",
+    "     'games_lost',\n",
+    "     'time_spent_on_fire_avg_per_10_min',\n",
+    "     'healing_done_avg_per_10_min',\n",
+    "     'multikills',\n",
+    "     'kpd',\n",
+    "     'hero_damage_done',\n",
+    "     'objective_time_most_in_game',\n",
+    "     'objective_time_avg_per_10_min',\n",
+    "     'defensive_assists_most_in_game',\n",
+    "     'final_blows_most_in_game',\n",
+    "     'games_won',\n",
+    "     'deaths_avg_per_10_min',\n",
+    "     'damage_blocked',\n",
+    "     'solo_kills_most_in_game',\n",
+    "     'recon_assists',\n",
+    "     'melee_final_blows',\n",
+    "     'recon_assists_most_in_game',\n",
+    "     'cards',\n",
+    "     'all_damage_done_most_in_game',\n",
+    "     'multikill_best',\n",
+    "     'environmental_kills_most_in_game',\n",
+    "     'turrets_destroyed_most_in_game',\n",
+    "     'objective_kills',\n",
+    "     'medals_silver',\n",
+    "     'games_played',\n",
+    "     'weapon_accuracy',\n",
+    "     'eliminations',\n",
+    "     'offensive_assists',\n",
+    "     'hero_damage_done_avg_per_10_min',\n",
+    "     'eliminations_most_in_game',\n",
+    "     'barrier_damage_done',\n",
+    "     'time_spent_on_fire',\n",
+    "     'environmental_deaths',\n",
+    "     'teleporter_pads_destroyed',\n",
+    "     'healing_done',\n",
+    "     'objective_kills_avg_per_10_min'\n",
+    "]\n"
    ]
   },
   {
