--- a/OverwatchProcessData.ipynb
+++ b/OverwatchProcessData.ipynb
@@ -78,6 +78,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
