--- a/OverwatchProcessData.ipynb
+++ b/OverwatchProcessData.ipynb
@@ -123,6 +123,37 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "def get_vector_combined(player, region, gametype=\"competitive\", stat_keys_general=None, stat_keys_heros=None):\n",
+    "    \n",
+    "    if not stat_keys_general:\n",
+    "        \n",
+    "        stat_keys_general = general_stats\n",
+    "        \n",
+    "    if not stat_keys_heros:\n",
+    "        \n",
+    "        stat_keys_heros = hero_stats\n",
+    "        \n",
+    "    vector_1 = get_vector_gamestats(player, region, gametype, stat_keys=stat_keys_general)\n",
+    "    vector_2 = get_vector_herostats(player, region, gametype, stat_keys=stat_keys_heros)\n",
+    "    \n",
+    "    try:\n",
+    "        \n",
+    "        return np.concatenate([vector_1, vector_2])\n",
+    "    \n",
+    "    except:\n",
+    "    \n",
+    "        return False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# Player Data Structure\n",
     "\n",
     "gametype = ['competitive', 'quickplay']\n",
