--- a/OverwatchGatherData.ipynb
+++ b/OverwatchGatherData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -10,6 +10,7 @@
    "source": [
     "# Imports\n",
     "\n",
+    "import urllib.parse\n",
     "import requests\n",
     "import base64\n",
     "import praw\n",
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "scrolled": false
@@ -55,7 +56,7 @@
     "    \n",
     "    battletag = battletag.replace('#', '-')\n",
     "    \n",
-    "    text = requests.get('https://owapi.net/api/v3/u/{}/blob'.format(battletag), headers={'User-Agent':'OWAgent'}).text\n",
+    "    text = requests.get('https://owapi.net/api/v3/u/{}/blob'.format(urllib.parse.quote_plus(battletag)), headers={'User-Agent':'OWAgent'}).text\n",
     "    \n",
     "    if \"ratelimited\" in text:\n",
     "        \n",
@@ -73,7 +74,7 @@
     "    \n",
     "    os.makedirs('profiles', exist_ok=True)\n",
     "    \n",
-    "    b64_name = str(base64.b64encode(battletag.encode('utf-8')))[2:-1]\n",
+    "    b64_name = str(base64.b64encode(battletag.encode('utf-8'), b'=-'))[2:-1]\n",
     "    filename = b64_name + \".json\"\n",
     "    \n",
     "    if filename not in os.listdir('profiles'):\n",
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true,
     "scrolled": false
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -206,7 +207,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "ow_tracker_methods = ['CompetitiveRank', 'EliminationsPM', 'DamageDonePM', 'HealingDonePM', 'FinalBlowsPM', 'Kd',\n",
+    "                      'Kad', 'Wl', 'Kg', 'SoloKills', 'ObjectiveKills', 'FinalBlows', 'DamageDone', 'Eliminations',\n",
+    "                      'EnvironmentalKills', 'MultiKills', 'Deaths', 'GamesPlayed', 'TimeSpentOnFire', 'ObjectiveTime',\n",
+    "                      'TimePlayed']\n",
+    "\n",
+    "def get_overwatchtracker_pages(method, pages=1000):\n",
+    "    \n",
+    "    for i in range(pages):\n",
+    "        \n",
+    "        yield requests.get('https://overwatchtracker.com/leaderboards/pc/global/{}?page={}&mode=1'.format(method, i + 1)).text\n",
+    "\n",
+    "def dl_overwatchtracker():\n",
+    "        \n",
+    "    for method in ow_tracker_methods:\n",
+    "        \n",
+    "        try:\n",
+    "\n",
+    "            for page in get_overwatchtracker_pages(method, 300):\n",
+    "\n",
+    "                for battletag in find_usernames(page):\n",
+    "\n",
+    "                    save_profile(battletag)\n",
+    "                    \n",
+    "        except Exception as e:\n",
+    "            \n",
+    "            print(e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -215,7 +251,8 @@
     "# Run\n",
     "\n",
     "# dl_spreedsheet()\n",
-    "# dl_reddit()"
+    "# dl_reddit()\n",
+    "# dl_overwatchtracker()"
    ]
   }
  ],
