--- a/OverwatchGatherData.ipynb
+++ b/OverwatchGatherData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "scrolled": false
@@ -46,7 +46,7 @@
     "\n",
     "def find_usernames(text): # Text -> list<Battletags>\n",
     "    \n",
-    "    for battletag in re.findall('[^\\s=,\"*>+#\\'\\\\^]{3,12}#\\d{4,5}', text):\n",
+    "    for battletag in re.findall('[^\\s=,;\"*>+#\\'\\\\^]{3,12}#\\d{4,5}', text):\n",
     "        \n",
     "        battletag = battletag.strip()\n",
     "        \n",
@@ -75,7 +75,7 @@
     "    os.makedirs('profiles', exist_ok=True)\n",
     "    \n",
     "    b64_name = str(base64.b64encode(battletag.encode('utf-8'), b'=-'))[2:-1]\n",
-    "    filename = b64_name + \".json\"\n",
+    "    filename = b64_name + '.json'\n",
     "    \n",
     "    if filename not in os.listdir('profiles'):\n",
     "        \n",
@@ -91,13 +91,21 @@
     "            \n",
     "        else:\n",
     "            \n",
+    "            if \"404\" in data:\n",
+    "                \n",
+    "                with open(os.path.join('profiles', filename), 'w') as profile:\n",
+    "                \n",
+    "                    profile.write(data)\n",
+    "                    \n",
+    "                print('Saved404: ' + battletag)\n",
+    "            \n",
     "            print(data)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "scrolled": false
@@ -181,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -207,12 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
-    "ow_tracker_methods = ['CompetitiveRank', 'EliminationsPM', 'DamageDonePM', 'HealingDonePM', 'FinalBlowsPM', 'Kd',\n",
+    "ow_tracker_methods = ['MostEliminations', 'MostDamageDone', 'Level', 'CompetitiveRank', 'EliminationsPM', 'DamageDonePM', 'HealingDonePM', 'FinalBlowsPM', 'Kd',\n",
     "                      'Kad', 'Wl', 'Kg', 'SoloKills', 'ObjectiveKills', 'FinalBlows', 'DamageDone', 'Eliminations',\n",
     "                      'EnvironmentalKills', 'MultiKills', 'Deaths', 'GamesPlayed', 'TimeSpentOnFire', 'ObjectiveTime',\n",
     "                      'TimePlayed']\n",
@@ -242,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
