--- a/OverwatchProcessData.ipynb
+++ b/OverwatchProcessData.ipynb
@@ -57,7 +57,7 @@
     "            \n",
     "        for key in stat_keys:\n",
     "                \n",
-    "            if \"overwatchguid\" not in key:\n",
+    "            if 'overwatchguid' not in key:\n",
     "                    \n",
     "                if key not in stats:\n",
     "                        \n",
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "def get_vector_herostats(player, region, gametype=\"competitive\", stat_keys=None):\n",
+    "def get_vector_herostats(player, region, gametype='competitive', stat_keys=None):\n",
     "    \n",
     "    if not stat_keys:\n",
     "        \n",
@@ -92,7 +92,7 @@
     "        \n",
     "    try:\n",
     "\n",
-    "        stats = player.json[region]['heroes'][\"stats\"][gametype]\n",
+    "        stats = player.json[region]['heroes']['stats'][gametype]\n",
     "            \n",
     "        vector = []\n",
     "            \n",
@@ -124,7 +124,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "def get_vector_combined(player, region, gametype=\"competitive\", stat_keys_general=None, stat_keys_heros=None):\n",
+    "def get_vector_combined(player, region, gametype='competitive', stat_keys_general=None, stat_keys_heros=None):\n",
     "    \n",
     "    if not stat_keys_general:\n",
     "        \n",
