--- a/OverwatchGatherData.ipynb
+++ b/OverwatchGatherData.ipynb
@@ -12,6 +12,7 @@
     "\n",
     "import urllib.parse\n",
     "import requests\n",
+    "import random\n",
     "import base64\n",
     "import praw\n",
     "import time\n",
@@ -227,11 +228,17 @@
     "                      'EnvironmentalKills', 'MultiKills', 'Deaths', 'GamesPlayed', 'TimeSpentOnFire', 'ObjectiveTime',\n",
     "                      'TimePlayed']\n",
     "\n",
-    "def get_overwatchtracker_pages(method, pages=1000):\n",
+    "def get_overwatchtracker_pages(method, pages=1000, random=False):\n",
     "    \n",
     "    for i in range(pages):\n",
     "        \n",
-    "        yield requests.get('https://overwatchtracker.com/leaderboards/pc/global/{}?page={}&mode=1'.format(method, i + 1)).text\n",
+    "        page_num = i + 1\n",
+    "        \n",
+    "        if random:\n",
+    "            \n",
+    "            page_num = random.randrange(1, 1400)\n",
+    "        \n",
+    "        yield requests.get('https://overwatchtracker.com/leaderboards/pc/global/{}?page={}&mode=1'.format(method, page_num)).text\n",
     "\n",
     "def dl_overwatchtracker():\n",
     "        \n",
@@ -239,7 +246,7 @@
     "        \n",
     "        try:\n",
     "\n",
-    "            for page in get_overwatchtracker_pages(method, 300):\n",
+    "            for page in get_overwatchtracker_pages(method, pages=300, random=True):\n",
     "\n",
     "                for battletag in find_usernames(page):\n",
     "\n",
