--- a/OverwatchGatherData.ipynb
+++ b/OverwatchGatherData.ipynb
@@ -57,7 +57,8 @@
     "    \n",
     "    battletag = battletag.replace('#', '-')\n",
     "    \n",
-    "    text = requests.get('https://owapi.net/api/v3/u/{}/blob'.format(urllib.parse.quote_plus(battletag)), headers={'User-Agent':'OWAgent'}).text\n",
+    "    text = requests.get('https://owapi.net/api/v3/u/{}/blob'.format(urllib.parse.quote_plus(battletag)), \n",
+    "                            headers={'User-Agent':'OWAgent'}).text\n",
     "    \n",
     "    if \"ratelimited\" in text:\n",
     "        \n",
@@ -162,10 +163,18 @@
    "source": [
     "# Reddit Data\n",
     "\n",
-    "subreddits = ['Overwatch', 'CompetitiveOverwatch', 'OverwatchUniversity', 'Overwatch_Memes', 'Overwatched', 'OverwatchCustomGames',\n",
-    "              'OverwatchCirclejerk', 'wholesomeoverwatch','ImaginaryOverwatch', 'Overwatch_comics', 'OverwatchHeroConcepts',\n",
-    "              'OverwatchLore', 'OverwatchLeague', 'AnaMains', 'HanaSong', 'luciomains', 'LucioRollouts', 'McCreeMains', \n",
-    "              'MeiMains', 'SymmetraMains', 'WidowmakerMains', 'ZaryaMains', 'ZenyattaMains', 'Hearthstone']\n",
+    "subreddits = ['Overwatch', 'CompetitiveOverwatch', \n",
+    "              'OverwatchUniversity', 'Overwatch_Memes', \n",
+    "              'Overwatched', 'OverwatchCustomGames',\n",
+    "              'OverwatchCirclejerk', 'wholesomeoverwatch',\n",
+    "              'ImaginaryOverwatch', 'Overwatch_comics', \n",
+    "              'OverwatchHeroConcepts', 'OverwatchLore', \n",
+    "              'OverwatchLeague', 'AnaMains', \n",
+    "              'HanaSong', 'luciomains', \n",
+    "              'LucioRollouts', 'McCreeMains', \n",
+    "              'MeiMains', 'SymmetraMains', \n",
+    "              'WidowmakerMains', 'ZaryaMains', \n",
+    "              'ZenyattaMains', 'Hearthstone']\n",
     "\n",
     "def generate_reddit_text(subreddit): # Subreddit -> the content of as many comments possible\n",
     "    \n",
@@ -223,10 +232,17 @@
    "outputs": [],
    "source": [
     "\n",
-    "ow_tracker_methods = ['MostEliminations', 'MostDamageDone', 'Level', 'CompetitiveRank', 'EliminationsPM', 'DamageDonePM', 'HealingDonePM', 'FinalBlowsPM', 'Kd',\n",
-    "                      'Kad', 'Wl', 'Kg', 'SoloKills', 'ObjectiveKills', 'FinalBlows', 'DamageDone', 'Eliminations',\n",
-    "                      'EnvironmentalKills', 'MultiKills', 'Deaths', 'GamesPlayed', 'TimeSpentOnFire', 'ObjectiveTime',\n",
-    "                      'TimePlayed']\n",
+    "ow_tracker_methods = ['MostEliminations', 'MostDamageDone', \n",
+    "                      'Level', 'CompetitiveRank', \n",
+    "                      'EliminationsPM', 'DamageDonePM', \n",
+    "                      'HealingDonePM', 'FinalBlowsPM', \n",
+    "                      'Kd','Kad', 'Wl', 'Kg', \n",
+    "                      'SoloKills', 'ObjectiveKills', \n",
+    "                      'FinalBlows', 'DamageDone', \n",
+    "                      'Eliminations', 'EnvironmentalKills', \n",
+    "                      'MultiKills', 'Deaths', \n",
+    "                      'GamesPlayed', 'TimeSpentOnFire', \n",
+    "                      'ObjectiveTime', 'TimePlayed']\n",
     "\n",
     "def get_overwatchtracker_pages(method, pages=1000, random=False):\n",
     "    \n",
