--- a/OverwatchGatherData.ipynb
+++ b/OverwatchGatherData.ipynb
@@ -283,9 +283,11 @@
    "source": [
     "# Run\n",
     "\n",
-    "# dl_spreedsheet()\n",
-    "# dl_reddit()\n",
-    "# dl_overwatchtracker()"
+    "if __name__ == \"__main__\":\n",
+    "    \n",
+    "    dl_spreedsheet()\n",
+    "    dl_reddit()\n",
+    "    dl_overwatchtracker()"
    ]
   }
  ],
@@ -305,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
