--- a/OverwatchPredictHeroSR.ipynb
+++ b/OverwatchPredictHeroSR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -49,7 +49,7 @@
        "(25, 145)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -364,11 +364,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "H:\\Users\\Shriv\\Anaconda3\\envs\\tf-cpu\\lib\\site-packages\\sklearn\\base.py:312: UserWarning: Trying to unpickle estimator StandardScaler from version 0.18.2 when using version 0.19.0. This might lead to breaking code or invalid results. Use at your own risk.\n",
+      "  UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# Load models from disk\n",
     "\n",
@@ -381,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -410,9 +417,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sshh12#1522 is 2284, predicted 2320\n",
+      "jay#13106 is False, predicted 2351\n",
+      "redpuma200#1798 is 2425, predicted 2359\n",
+      "Panzerjaeger#11644 is 2552, predicted 2326\n",
+      "EXcalibr#1962 is 2223, predicted 2121\n",
+      "WeissCold#1450 is False, predicted 2249\n",
+      "TimN11#1443 is 2221, predicted 2189\n",
+      "Battledik#11416 is 2005, predicted 2321\n",
+      "Tobirama#11276 is 2451, predicted 2280\n"
+     ]
+    }
+   ],
    "source": [
     "# Test\n",
     "\n",
@@ -431,9 +454,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tf-gpu]",
+   "display_name": "Python [conda env:tf-cpu]",
    "language": "python",
-   "name": "conda-env-tf-gpu-py"
+   "name": "conda-env-tf-cpu-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -445,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
