--- a/lab/OverwatchGatherData.ipynb
+++ b/lab/OverwatchGatherData.ipynb
@@ -74,18 +74,18 @@
     "    \n",
     "    print('Saving: ' + battletag)\n",
     "    \n",
-    "    os.makedirs('profiles', exist_ok=True)\n",
+    "    os.makedirs(os.path.join('..', 'profiles'), exist_ok=True)\n",
     "    \n",
     "    b64_name = str(base64.b64encode(battletag.encode('utf-8'), b'=-'))[2:-1]\n",
     "    filename = b64_name + '.json'\n",
     "    \n",
-    "    if filename not in os.listdir('profiles'):\n",
+    "    if filename not in os.listdir(os.path.join('..', 'profiles')):\n",
     "        \n",
     "        data = get_user_json(battletag)\n",
     "        \n",
     "        if \"error\" not in data:\n",
     "            \n",
-    "            with open(os.path.join('profiles', filename), 'w') as profile:\n",
+    "            with open(os.path.join('..', 'profiles', filename), 'w') as profile:\n",
     "                \n",
     "                profile.write(data)\n",
     "                \n",
@@ -95,7 +95,7 @@
     "            \n",
     "            if \"404\" in data:\n",
     "                \n",
-    "                with open(os.path.join('profiles', filename), 'w') as profile:\n",
+    "                with open(os.path.join('..', 'profiles', filename), 'w') as profile:\n",
     "                \n",
     "                    profile.write(data)\n",
     "                    \n",
