--- a/lab/OverwatchPredictHeroSR.ipynb
+++ b/lab/OverwatchPredictHeroSR.ipynb
@@ -73,9 +73,9 @@
     "\n",
     "def generate_players():\n",
     "    \n",
-    "    for filename in os.listdir('profiles'):\n",
+    "    for filename in os.listdir(os.path.join('..', 'profiles')):\n",
     "        \n",
-    "        player = Player.from_file(os.path.join('profiles', filename))\n",
+    "        player = Player.from_file(os.path.join('..', 'profiles', filename))\n",
     "        \n",
     "        if 'error' not in player.json:\n",
     "            \n",
@@ -198,9 +198,9 @@
     "    \n",
     "    if from_file:\n",
     "        \n",
-    "        model = load_model(os.path.join('models', '{}-sr.h5'.format(hero)))\n",
+    "        model = load_model(os.path.join('..', 'models', '{}-sr.h5'.format(hero)))\n",
     "        \n",
-    "        scaler_X = joblib.load(os.path.join('models', '{}-sr.pkl'.format(hero)))\n",
+    "        scaler_X = joblib.load(os.path.join('..', 'models', '{}-sr.pkl'.format(hero)))\n",
     "        \n",
     "        return None, model, scaler_X\n",
     "    \n",
@@ -212,8 +212,8 @@
     "\n",
     "    history = train_model(model, X, y, epochs=1500, batch_size=256)\n",
     "\n",
-    "    model.save(os.path.join('models', '{}-sr.h5'.format(hero)))\n",
-    "    joblib.dump(scaler_X, os.path.join('models', '{}-sr.pkl'.format(hero)))\n",
+    "    model.save(os.path.join('..', 'models', '{}-sr.h5'.format(hero)))\n",
+    "    joblib.dump(scaler_X, os.path.join('..', 'models', '{}-sr.pkl'.format(hero)))\n",
     "    \n",
     "    return history, model, scaler_X\n"
    ]
