--- a/lab/OverwatchPredictSR.ipynb
+++ b/lab/OverwatchPredictSR.ipynb
@@ -71,9 +71,9 @@
     "        \n",
     "def generate_players():\n",
     "    \n",
-    "    for filename in os.listdir('profiles'):\n",
+    "    for filename in os.listdir(os.path.join('..', 'profiles')):\n",
     "        \n",
-    "        player = Player.from_file(os.path.join('profiles', filename))\n",
+    "        player = Player.from_file(os.path.join('..', 'profiles', filename))\n",
     "        \n",
     "        if 'error' not in player.json:\n",
     "            \n",
@@ -277,8 +277,8 @@
     "\n",
     "def get_model_from_file():\n",
     "    \n",
-    "    model = load_model(os.path.join('models', 'overall-sr.h5'))\n",
-    "    scalar = joblib.load(os.path.join('models', 'overall-sr.pkl'))\n",
+    "    model = load_model(os.path.join('..', 'models', 'overall-sr.h5'))\n",
+    "    scalar = joblib.load(os.path.join('..', 'models', 'overall-sr.pkl'))\n",
     "    \n",
     "    return model, scalar\n"
    ]
@@ -441,8 +441,8 @@
     "\n",
     "    history = train_model(model, X, y, epochs=1000, batch_size=32)\n",
     "    \n",
-    "    model.save(os.path.join('models', 'overall-sr.h5'))\n",
-    "    joblib.dump(scaler_X, os.path.join('models', 'overall-sr.pkl'))\n",
+    "    model.save(os.path.join('..', 'models', 'overall-sr.h5'))\n",
+    "    joblib.dump(scaler_X, os.path.join('..', 'models', 'overall-sr.pkl'))\n",
     "\n",
     "    view(history)\n"
    ]
@@ -450,7 +450,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Run (Load from disk)\n",
