Made Data Collection Randomer

--- a/lab/OverwatchGatherData.ipynb
+++ b/lab/OverwatchGatherData.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -243,51 +243,55 @@
     "                      'MultiKills', 'Deaths', \n",
     "                      'GamesPlayed', 'TimeSpentOnFire', \n",
     "                      'ObjectiveTime', 'TimePlayed']\n",
-    "\n",
-    "def get_overwatchtracker_pages(method, pages=1000, random=False):\n",
-    "    \n",
-    "    for i in range(pages):\n",
+    "  \n",
+    "def dl_overwatchtracker(limit=None):\n",
     "        \n",
-    "        page_num = i + 1\n",
+    "        if limit == None: limit = 99999\n",
     "        \n",
-    "        if random:\n",
+    "        while limit > 0:\n",
     "            \n",
+    "            method = random.choice(ow_tracker_methods)\n",
     "            page_num = random.randrange(1, 1400)\n",
-    "        \n",
-    "        yield requests.get('https://overwatchtracker.com/leaderboards/pc/global/{}?page={}&mode=1'.format(method, page_num)).text\n",
-    "\n",
-    "def dl_overwatchtracker():\n",
-    "        \n",
-    "    for method in ow_tracker_methods:\n",
-    "        \n",
-    "        try:\n",
-    "\n",
-    "            for page in get_overwatchtracker_pages(method, pages=300, random=True):\n",
+    "            \n",
+    "            try:\n",
+    "            \n",
+    "                page = requests.get('https://overwatchtracker.com/leaderboards/pc/global/{}?page={}&mode=1'.format(method, page_num)).text\n",
     "\n",
     "                for battletag in find_usernames(page):\n",
     "\n",
     "                    save_profile(battletag)\n",
     "                    \n",
-    "        except Exception as e:\n",
-    "            \n",
-    "            print(e)\n"
+    "                    limit -= 1\n",
+    "                    \n",
+    "            except Exception as e:\n",
+    "                print(e)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving: MasterMaguku#2741\n",
+      "Saved: MasterMaguku#2741\n",
+      "Saving: Mufasum#1141\n",
+      "Saved: Mufasum#1141\n",
+      "Saving: Sylphrena#11439\n"
+     ]
+    }
+   ],
    "source": [
     "# Run\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    \n",
-    "    dl_spreedsheet()\n",
-    "    dl_reddit()\n",
-    "    dl_overwatchtracker()"
+    "    dl_overwatchtracker()\n"
    ]
   }
  ],
