Tweaked and Optimized Processing

--- a/lab/OverwatchProcessData.ipynb
+++ b/lab/OverwatchProcessData.ipynb
@@ -101,8 +101,13 @@
     "            hero, stat_type, value = stat.split(\" \")\n",
     "\n",
     "            try:\n",
+    "                \n",
+    "                stat_num = stats[hero][stat_type][value]\n",
+    "                \n",
+    "                if isinstance(stat_num, str):\n",
+    "                    stat_num = float(stat_num.replace('%', ''))\n",
     "\n",
-    "                vector.append(stats[hero][stat_type][value])\n",
+    "                vector.append(stat_num)\n",
     "\n",
     "            except (TypeError, KeyError):\n",
     "\n",
@@ -149,7 +154,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
